# claude-agent

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.server  Dockerfile.worker  PLAN.md  README.md  build.sh  deploy.sh  docker-compose.yml  run-tests.sh  test-sentry-fix.sh
crates/agents/: Cargo.toml
crates/agents/src/: jira_handler.rs  lib.rs  mr_reviewer.rs  sentry_fixer.rs
crates/agents/src/mr_reviewer/: executor.rs  mod.rs  prompts.rs
crates/claude/: Cargo.toml
crates/claude/src/: lib.rs  output.rs  process.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: controller.rs  event.rs  lib.rs  state.rs  stream.rs
crates/server/: Cargo.toml
crates/server/src/: github.rs  gitlab.rs  jira.rs  jira_token.rs  lib.rs  main.rs  payload.rs  queue.rs  scheduler.rs  sentry.rs  sentry_api.rs  webhook.rs
crates/server/src/webhook/: api.rs  github.rs  gitlab.rs  jira.rs  mod.rs  sentry.rs  tokens.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: prompt-comparison.md
k8s/: deployment.yaml  job-template.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secrets.yaml  service.yaml
worker-home/.claude/: CLAUDE.md
