[package]
name = "claude-agent-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

claude-agent-core = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["json"] }
