[package]
name = "claude-agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "claude-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
futures-util = "0.3"

claude-agent-core = { workspace = true }
claude-agent-server = { workspace = true }
