[package]
name = "claude-agent-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "claude-agent-worker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }

claude-agent-core = { workspace = true }
claude-agent-claude = { workspace = true }
claude-agent-agents = { workspace = true }
