[package]
name = "claude-agent-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "claude-agent-worker"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }

reqwest = { workspace = true }
urlencoding = { workspace = true }

claude-agent-core = { workspace = true }
claude-agent-agents = { workspace = true }
claude-agent-server = { workspace = true }
